汉化 制作镜像

--- a/assets/frpc/static/index.html
+++ b/assets/frpc/static/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
     <meta charset="utf-8">
-    <title>frp client admin UI</title>
+    <title>frp 客户端管理界面</title>
   <script type="module" crossorigin src="./index-bLBhaJo8.js"></script>
   <link rel="stylesheet" crossorigin href="./index-iuf46MlF.css">
 </head>
