--- a/assets/frps/static/index.html
+++ b/assets/frps/static/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="zh" class="dark">
 
 <head>
     <meta charset="utf-8">
-    <title>frps dashboard</title>
+    <title>frps 控制面板</title>
   <script type="module" crossorigin src="./index-82-40HIG.js"></script>
   <link rel="stylesheet" crossorigin href="./index-rzPDshRD.css">
 </head>
